[gd_scene load_steps=4 format=3 uid="uid://boenqc2oylyrk"]

[ext_resource type="Script" path="res://Multiplayer/multiplayer.gd" id="1_h5lge"]
[ext_resource type="PackedScene" uid="uid://fj4ouhttn3x2" path="res://Player/player.tscn" id="2_453qe"]
[ext_resource type="Texture2D" uid="uid://u8cc0w46qmal" path="res://Images/BlackBackground.jpg" id="2_jvnmw"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_h5lge")
player_scene = ExtResource("2_453qe")

[node name="HostButton" type="Button" parent="."]
offset_left = 408.0
offset_top = 152.0
offset_right = 743.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 40
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 408.0
offset_top = 280.0
offset_right = 743.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 40
text = "Join
"

[node name="BackButton" type="Button" parent="."]
offset_left = 408.0
offset_top = 408.0
offset_right = 743.0
offset_bottom = 489.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(4.44788, 3.34021)
texture = ExtResource("2_jvnmw")
metadata/_edit_lock_ = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
